src/objects/TechnicalQualityTeam__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalNeeded__c</fullName>
        <formula>IF(ISPICKVAL( Role__c,&quot;Reviewer&quot;), True, 
IF(ISPICKVAL( Role__c, &quot;Lead Verifier&quot;), True, 
IF(ISPICKVAL( Role__c,&quot;Independent Reviewer&quot;) ,True, 
False)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checker_DateTime__c</fullName>
        <formula>IF( Approved__c,  NOW() , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checker Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checker_Date_Time__c</fullName>
        <label>Checker Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Technical Quality Team</relationshipLabel>
        <relationshipName>Technical_Quality_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projid__c</fullName>
        <formula>Deliverable__r.Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredDate__c</fullName>
        <inlineHelpText>The date the deliverable is scheduled for review.</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>This is the role the team member will play in the technical quality review (e.g., Approver, Reviewer, Owner, Originator, Lead Verifier, Independent Reviewer).</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Originator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Verifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverable Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Statuses for the technical quality reviewers which will be automatically updated by the approval process.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_For_Approval__c</fullName>
        <formula>IF( ApprovalNeeded__c ,HYPERLINK(&quot;/servlet/servlet.Integration?lid=00be0000000ELzv&amp;eid=&quot;&amp; Id&amp; &quot;&amp;ic=1&quot;, &quot;Submit for Approval&quot;,&quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit For Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalQualityTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for the project team member who will be selected to play a role in the technical quality review. If applicable, remember to consider Safety in Design (SiD) requirements when selecting reviewers.</inlineHelpText>
        <label>Technical Quality Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Quality_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Technical Quality Team</label>
    <nameField>
        <displayFormat>TQT-{000000}</displayFormat>
        <label>Technical Quality Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Quality Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>